# dev-notes

./: README.md
R/: README.md
R/data.table/: data.table.Rmd  data.table.html  data.table.md
R/structure/: structure_benchmark.R
cpp/gperftools/: gperftools.html  gperftools.md
cpp/hdf5/: CMakeLists.txt
cpp/hdf5/src/: CMakeLists.txt  h5make.cpp  read.R
cpp/str_cstr/: main  main.cpp
rsync/: rsync.md
